Replace ArrayList/Collections with List.of() in JsonValueMatcher